--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     main { padding-top: 140px; }
 
     .hero {
-      background: url('Fundo1.png') center 30%/cover no-repeat;
+      background: url('fundo1.png') center 30%/cover no-repeat;
       height: 80vh;
       display: flex;
       align-items: center;
@@ -161,7 +161,7 @@
       .hero-text h1 { font-size: 22px; }
       .hero-text p { font-size: 14px; }
       .hero {
-        background: url('Fundo1.png') center 30%/cover no-repeat;
+        background: url('fundo1.png') center 30%/cover no-repeat;
         height: 70vh;
         display: flex;
         align-items: center;
